force-app/main/default/objects/Project_History__c/Project_History__c.object-meta.xml
<CustomObject>
    <description>A notable event in the history of the project</description>
    <label>Project History</label>
    <nameField>
        <label>Project History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>