force-app/main/default/objects/Project_History__c/fields/I_RS_Agreement__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The legal agreement detailing the variation</description>
    <inlineHelpText>The legal agreement detailing the variation</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Project Histories</relationshipLabel>
    <relationshipName>Project_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>