force-app/main/default/objects/Project_History__c/fields/I_RS_Amount_Transferred__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount_Transferred__c</fullName>
    <label>Amount Transferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>