force-app/main/default/objects/Project_History__c/fields/I_RS_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Event_Date__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>