force-app/main/default/objects/Project_History__c/fields/I_RS_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transferred to La Trobe</fullName>
            </value>
            <value>
                <fullName>Transferred from La Trobe</fullName>
            </value>
            <value>
                <fullName>Transfer of administering organisation to La Trobe</fullName>
            </value>
            <value>
                <fullName>Transfer of administering organisation status from La Trobe</fullName>
            </value>
            <value>
                <fullName>Relinquished</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Other Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>