force-app/main/default/objects/Project_History__c/fields/I_RS_Organisation_transferred_from__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_transferred_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organisation transferring the administration or project to La Trobe</description>
    <inlineHelpText>The organisation transferring the administration or project to La Trobe</inlineHelpText>
    <label>Previous Organisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Histories</relationshipLabel>
    <relationshipName>Project_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>