force-app/main/default/objects/Project_History__c/fields/I_RS_Organisation_transferred_to__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_transferred_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organisation that is receiving the project or project administration</description>
    <inlineHelpText>The organisation that is receiving the project or project administration</inlineHelpText>
    <label>New Organisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Histories Transferred</relationshipLabel>
    <relationshipName>Project_Histories_transferred_to</relationshipName>
    <type>Lookup</type>
</CustomField>