force-app/main/default/objects/Project_History__c/fields/I_RS_Original_Grant_Value__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Original_Grant_Value__c</fullName>
    <inlineHelpText>Total amount awarded to original admin org.</inlineHelpText>
    <label>Original Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>