force-app/main/default/objects/Project_History__c/fields/I_RS_Project_Proposals__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposals__c</fullName>
    <label>Project Proposals</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Project Histories</relationshipLabel>
    <relationshipName>Project_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>