force-app/main/default/objects/Project_History__c/fields/I_RS_Reasons__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reasons__c</fullName>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>