force-app/main/default/objects/Project_History__c/fields/I_RS_Relinquished_Terminated_Details__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Relinquished_Terminated_Details__c</fullName>
    <label>Reasons Relinquished/Terminated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>