force-app/main/default/objects/Project_History__c/fields/I_RS_Remaining_Grant_Value__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Remaining_Grant_Value__c</fullName>
    <description>Future instalments of funding to come to La Trobe</description>
    <inlineHelpText>Future instalments of funding to come to La Trobe</inlineHelpText>
    <label>Remaining Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>