force-app/main/default/objects/Project_History__c/fields/I_RS_Remaining_Grant_Value_Out__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Remaining_Grant_Value_Out__c</fullName>
    <description>Revenue lost due to not getting future funding instalments</description>
    <inlineHelpText>Revenue lost due to not getting future funding instalments</inlineHelpText>
    <label>Remaining Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>