force-app/main/default/objects/Project_History__c/fields/I_RS_Unexpended_Funding_Frm_Prv_Admin__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Unexpended_Funding_Frm_Prv_Admin__c</fullName>
    <description>Funding to be transferred to La Trobe from the previous organisation</description>
    <inlineHelpText>Funding to be transferred to La Trobe from the previous organisation</inlineHelpText>
    <label>Unexpended Funding From Prev Admin Org</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>