force-app/main/default/objects/Project_History__c/fields/I_RS_Unexpended_Funding_To_Return__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Unexpended_Funding_To_Return__c</fullName>
    <label>Unexpended Funding To Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>