force-app/main/default/objects/Project_History__c/fields/I_RS_Unexpended_Funding_To_Transfer__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Unexpended_Funding_To_Transfer__c</fullName>
    <description>The funding held by La Trobe that needs to be returned to the funder or transferred to the new organisation</description>
    <inlineHelpText>The funding held by La Trobe that needs to be returned to the funder or transferred to the new organisation</inlineHelpText>
    <label>Unexpended Funding To Transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>