force-app/main/default/objects/Project_History__c/listViews/All_Project_Histories.listView-meta.xml
<ListView>
    <fullName>All_Project_Histories</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>I_RS_Event_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Project Histories</label>
</ListView>